testdata/invalid/ringbuf_missing_nil_check.hzn
package invalid

type Event struct {
    pid u32
}

map Events ringbuf[Event]

@tracepoint("sched:sched_process_exec")
func Bad(ctx tracepoint.Exec) i32 {
    event := Events.reserve()
    event.pid = 1
    Events.submit(event)
    return 0
}

